@@ -1,3 +1,11 @@
+2005-06-20  Vincent Noel  <vnoel@cox.net>
+
+	* calendar.c: (init_calendar_data):
+	* logview.c:
+	* userprefs.c: (prefs_create_defaults): Fix functions return
+	values. Patch from Stanislav Brabec (bug #308382). Add a few more
+	default logs.
+
 2005-06-16  Vincent Noel  <vnoel@cox.net>
 
 	* calendar.c:
